--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
     "url": "https://github.com/Automattic/_s/issues"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^12.1.0",
-    "browser-sync": "^2.27.5",
+    "@wordpress/scripts": "^26.14.0",
+    "autoprefixer": "^10.4.16",
+    "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
-    "dir-archiver": "^1.1.1",
+    "dir-archiver": "^2.1.0",
     "laravel-mix-purgecss": "^6.0.0",
     "laravel-mix-webp": "^0.1.3",
-    "node-sass": "^4.14.1",
-    "postcss": "^8.3.1",
-    "resolve-url-loader": "^4.0.0",
-    "rtlcss": "^2.5.0",
-    "sass-loader": "^12.1.0"
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.31",
+    "resolve-url-loader": "^5.0.0",
+    "rtlcss": "^4.1.1",
+    "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.3"
   },
   "rtlcssConfig": {
     "options": {
@@ -60,7 +62,6 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.1",
-    "bootstrap": "^5.1.1",
     "counterup2": "^2.0.2",
     "cross-env": "^7.0.3",
     "laravel-mix": "^6.0.31",
