--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
     "scripts": {
         "lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
         "lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor .",
-        "make-pot": "wp i18n make-pot . languages/_s.pot"
+        "make-pot": "wp i18n make-pot . languages/_s.pot",
+        "update-pot": "wp i18n make-pot . languages/_s.pot --merge=languages/_s.pot",
+        "update-languages": "./handle-language-update.sh",
+        "fresh-languages": "rm -f languages/_s.pot && composer make-pot && composer update-languages"
     },
     "support": {
         "issues": "https://github.com/Automattic/_s/issues",
